# TurtleBot_ChatGPT_Wrapper_TFG

./: CMakeLists.txt  Instrucciones_uso.md  README.md  launcher.sh  package.xml  places.db
database/: turtlebot_database_1.db  turtlebot_database_2.db  turtlebot_database_3.db  turtlebot_db.db
launchers/: follower.launch  wall_follower.launch
mapas/: mapa_completo_cetinia-_1_-_1_-_1_.pgm  mapa_departamental.pgm
maps/: casa.pgm  casa.yaml  world.pgm  world.yaml
scripts/: CAMBIOS REALIZADOS.txt  ChatGPTProcessorNode.py  DatabaseHandler.py  MANUAL_USO.txt  RobotSpeaker.py  SpeakLinkNode.py  TelegramSpeechToTextNode.py  TurtleBotActions.py  TurtleBotControlNode.py  generated_node.py  prueba_distancia.py  wall_follower_node.py  waller inicial.txt
