<?xml version="1.0"?>
<package format="2">
  <name>turtlebot_chatgpt_wrapper</name>
  <version>0.0.0</version>
  <description>The turtlebot_chatgpt_wrapper package</description>

  <maintainer email="jorge@todo.todo">jorge</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>


  <export>

  </export>
</package>
